Lens/Parser/LensParser.cs
using System.Collections.Generic;
using System.Globalization;
using System.Linq;
using System.Text;
using Lens.Compiler;
using Lens.Lexer;
using Lens.Resolver;
using Lens.SyntaxTree;
using Lens.SyntaxTree.ControlFlow;
using Lens.SyntaxTree.Declarations;
using Lens.SyntaxTree.Declarations.Functions;
using Lens.SyntaxTree.Declarations.Locals;
using Lens.SyntaxTree.Declarations.Types;
using Lens.SyntaxTree.Expressions;
using Lens.SyntaxTree.Expressions.GetSet;
using Lens.SyntaxTree.Expressions.Instantiation;
using Lens.SyntaxTree.Literals;
using Lens.SyntaxTree.Operators.TypeBased;
using Lens.SyntaxTree.PatternMatching;
using Lens.SyntaxTree.PatternMatching.Rules;
using Lens.Translations;

namespace Lens.Parser
{
    internal partial class LensParser
    {
        #region Constructor

        public LensParser(IEnumerable<Lexem> lexems)
        {
            _lexems = lexems.ToArray();

            Nodes = ParseMain().ToList();
        }

        #endregion

        #region Fields

        /// <summary>
        /// Generated list of nodes.
        /// </summary>
        public List<NodeBase> Nodes { get; private set; }

        /// <summary>
        /// Source list of lexems.
        /// </summary>
        private readonly Lexem[] _lexems;

        /// <summary>
        /// Current index of the lexem in the stream.
        /// </summary>
        private int _lexemId;

        #endregion

        #region Globals

        /// <summary>
        /// main                                        = stmt { NL stmt } EOF
        /// </summary>
        private IEnumerable<NodeBase> ParseMain()
        {
            yield return ParseStmt();

            while (!Check(LexemType.Eof))
            {
                if (!IsStmtSeparator())
                {
                    if (Peek(LexemType.Assign))
                        Error(ParserMessages.AssignLvalueExpected);
                    else
                        Error(ParserMessages.NewlineSeparatorExpected);
                }

                yield return ParseStmt();
            }
        }

        /// <summary>
        /// stmt                                        = using | record_def | type_def | fun_def | local_stmt
        /// </summary>
        private NodeBase ParseStmt()
        {
            return Attempt(ParseUsing)
                   ?? Attempt(ParseRecordDef)
                   ?? Attempt(ParseTypeDef)
                   ?? Attempt(ParseFunDef)
                   ?? Ensure(ParseLocalStmt, ParserMessages.UnknownStatement);
        }

        #endregion

        #region Namespace & type signatures

        /// <summary>
        /// namespace                                   = identifier { "." identifier }
        /// </summary>
        private TypeSignature ParseNamespace()
        {
            return Bind(() =>
                {
                    if (!Peek(LexemType.Identifier))
                        return null;

                    var identifier = GetValue();
                    if (!Peek(LexemType.Dot))
                        return new TypeSignature(identifier);

                    var sb = new StringBuilder(identifier);
                    while (Check(LexemType.Dot))
                    {
                        identifier = Ensure(LexemType.Identifier, ParserMessages.IdentifierExpected).Value;
                        sb.Append(".");
                        sb.Append(identifier);
                    }

                    return new TypeSignature(sb.ToString());
                }
            );
        }

        /// <summary>
        /// type                                        = namespace [ type_args ] { "[]" | "?" | "~" }
        /// </summary>
        private TypeSignature ParseType()
        {
            var node = Attempt(ParseNamespace);
            if (node == null)
                return null;

            var args = Attempt(ParseTypeArgs);
            if (args != null)
                node = new TypeSignature(node.Name, args.ToArray());

            while (true)
            {
                if (Peek(LexemType.SquareOpen, LexemType.SquareClose))
                {
                    node = new TypeSignature(null, "[]", node);
                    Skip(2);
                }

                // "?[" lexes as a null-safe indexer, but in a type signature it starts an array of nullables
                else if (Peek(LexemType.NullSafeSquareOpen, LexemType.SquareClose))
                {
                    node = new TypeSignature(null, "[]", new TypeSignature(null, "?", node));
                    Skip(2);
                }

                else if (Check(LexemType.Tilde))
                    node = new TypeSignature(null, "~", node);

                else if (Check(LexemType.QuestionMark))
                    node = new TypeSignature(null, "?", node);

                else
                    return node;
            }
        }

        /// <summary>
        /// type_args                                   = "<" type { "," type } ">"
        /// </summary>
        private List<TypeSignature> ParseTypeArgs()
        {
            if (!Check(LexemType.Less))
                return null;

            var arg = Attempt(ParseType);
            if (arg == null)
                return null;

            if (!PeekAny(new[] {LexemType.Comma, LexemType.Greater}))
                return null;

            var list = new List<TypeSignature> {arg};
            while (Check(LexemType.Comma))
                list.Add(Ensure(ParseType, ParserMessages.TypeArgumentExpected));

            Ensure(LexemType.Greater, ParserMessages.SymbolExpected, '>');
            return list;
        }

        /// <summary>
        /// type_params                                 = "&lt;" type_param { "," type_param } "&gt;"
        ///
        /// Unlike type_args, this is a declaration site: after the name of the declared entity
        /// a "&lt;" cannot start anything else, so there is no need to backtrack.
        /// </summary>
        private List<TypeParameterDefinition> ParseTypeParams()
        {
            if (!Check(LexemType.Less))
                return null;

            var list = new List<TypeParameterDefinition> {Bind(ParseTypeParam)};
            while (Check(LexemType.Comma))
                list.Add(Bind(ParseTypeParam));

            Ensure(LexemType.Greater, ParserMessages.SymbolExpected, '>');
            return list;
        }

        /// <summary>
        /// type_param                                  = identifier [ "=" type_constraints ]
        /// type_constraints                            = type_constraint { "&amp;" type_constraint }
        /// </summary>
        private TypeParameterDefinition ParseTypeParam()
        {
            var node = new TypeParameterDefinition();
            node.Name = Ensure(LexemType.Identifier, ParserMessages.TypeParameterExpected).Value;

            if (Check(LexemType.Assign))
            {
                ParseTypeConstraint(node);
                while (Check(LexemType.BitAnd))
                    ParseTypeConstraint(node);
            }

            return node;
        }

        /// <summary>
        /// type_constraint                             = "class" | "struct" | "new" | type
        ///
        /// Note that "class" and "struct" are ordinary identifiers everywhere else in the language.
        /// Inside a constraint list they always win over a host type of the same name.
        /// </summary>
        private void ParseTypeConstraint(TypeParameterDefinition node)
        {
            if (Check(LexemType.New))
            {
                node.RequiresDefaultCtor = true;
                node.Keywords.Add("new");
                return;
            }

            if (PeekConstraintKeyword("class"))
            {
                Skip();
                node.IsReferenceType = true;
                node.Keywords.Add("class");
                return;
            }

            if (PeekConstraintKeyword("struct"))
            {
                Skip();
                node.IsValueType = true;
                node.Keywords.Add("struct");
                return;
            }

            node.TypeConstraints.Add(Ensure(ParseType, ParserMessages.TypeConstraintExpected));
        }

        /// <summary>
        /// Checks if the current lexem is the given pseudo-keyword used in a constraint list.
        /// </summary>
        private bool PeekConstraintKeyword(string keyword)
        {
            return Peek(LexemType.Identifier) && _lexems[_lexemId].Value == keyword;
        }

        #endregion

        #region Structures

        /// <summary>
        /// using                                       = "using" namespace NL
        /// </summary>
        private UseNode ParseUsing()
        {
            if (!Check(LexemType.Use))
                return null;

            var nsp = Ensure(ParseNamespace, ParserMessages.NamespaceExpected);
            var node = new UseNode {Namespace = nsp.FullSignature};

            return node;
        }

        /// <summary>
        /// record_def                                  = "record" identifier [ type_params ] INDENT record_stmt { NL record_stmt } DEDENT
        /// </summary>
        private RecordDefinitionNode ParseRecordDef()
        {
            if (!Check(LexemType.Record))
                return null;

            var node = new RecordDefinitionNode();

            node.Name = Ensure(LexemType.Identifier, ParserMessages.RecordIdentifierExpected).Value;
            node.TypeParameters = ParseTypeParams();
            Ensure(LexemType.Indent, ParserMessages.RecordIndentExpected);

            var field = Bind(ParseRecordStmt);
            node.Entries.Add(field);

            while (!Check(LexemType.Dedent))
            {
                Ensure(LexemType.NewLine, ParserMessages.RecordSeparatorExpected);
                field = Bind(ParseRecordStmt);
                node.Entries.Add(field);
            }

            return node;
        }

        /// <summary>
        /// record_stmt                                 = identifier ":" type
        /// </summary>
        private RecordField ParseRecordStmt()
        {
            var node = new RecordField();

            node.Name = Ensure(LexemType.Identifier, ParserMessages.RecordFieldIdentifierExpected).Value;
            Ensure(LexemType.Colon, ParserMessages.SymbolExpected, ':');
            node.Type = Ensure(ParseType, ParserMessages.RecordFieldTypeExpected);

            return node;
        }

        /// <summary>
        /// type_def                                    = "type" identifier [ type_params ] INDENT type_stmt { type_stmt } DEDENT
        /// </summary>
        private TypeDefinitionNode ParseTypeDef()
        {
            if (!Check(LexemType.Type))
                return null;

            var node = new TypeDefinitionNode();

            node.Name = Ensure(LexemType.Identifier, ParserMessages.TypeIdentifierExpected).Value;
            node.TypeParameters = ParseTypeParams();
            Ensure(LexemType.Indent, ParserMessages.TypeIndentExpected);

            var field = Bind(ParseTypeStmt);
            node.Entries.Add(field);

            while (!Check(LexemType.Dedent))
            {
                Ensure(LexemType.NewLine, ParserMessages.TypeSeparatorExpected);
                field = Bind(ParseTypeStmt);
                node.Entries.Add(field);
            }

            return node;
        }

        /// <summary>
        /// type_stmt                                   = identifier [ "of" type ]
        /// </summary>
        private TypeLabel ParseTypeStmt()
        {
            var node = new TypeLabel();

            node.Name = Ensure(LexemType.Identifier, ParserMessages.TypeLabelIdentifierExpected).Value;
            if (Check(LexemType.Of))
                node.TagType = Ensure(ParseType, ParserMessages.TypeLabelTagTypeExpected);

            return node;
        }

        /// <summary>
        /// fun_def                                     = [ "pure" ] "fun" identifier [ type_params ] [ ":" type ] fun_args "->" block
        /// </summary>
        private FunctionNode ParseFunDef()
        {
            var node = new FunctionNode();
            node.IsPure = Check(LexemType.Pure);

            if (!Check(LexemType.Fun))
            {
                if (node.IsPure)
                    Error(ParserMessages.FunctionDefExpected);
                else
                    return null;
            }

            node.Name = Ensure(LexemType.Identifier, ParserMessages.FunctionIdentifierExpected).Value;
            node.TypeParameters = ParseTypeParams();
            if (Check(LexemType.Colon))
                node.ReturnTypeSignature = Ensure(ParseType, ParserMessages.FunctionReturnExpected);

            node.Arguments = Attempt(() => ParseFunArgs(true)) ?? new List<FunctionArgument>();
            Ensure(LexemType.Arrow, ParserMessages.SymbolExpected, "->");
            node.Body.LoadFrom(Ensure(ParseBlock, ParserMessages.FunctionBodyExpected));

            return node;
        }

        /// <summary>
        /// fun_args                                    = fun_single_arg | fun_many_args
        /// </summary>
        private List<FunctionArgument> ParseFunArgs(bool required = false)
        {
            var single = Attempt(() => ParseFunSingleArg(required));
            if (single != null)
                return new List<FunctionArgument> {single};

            return ParseFunManyArgs(required);
        }

        /// <summary>
        /// fun_arg                                     = identifier [ ":" [ "ref" ] type [ "... " ] ]
        /// </summary>
        private FunctionArgument ParseFunSingleArg(bool required = false)
        {
            if (!Peek(LexemType.Identifier))
                return null;

            var node = new FunctionArgument();
            node.Name = GetValue();

            if (!Check(LexemType.Colon))
            {
                if (required)
                    Error(ParserMessages.SymbolExpected, ":");

                node.Type = TypeEntryCache.Of<UnspecifiedType>();
                return node;
            }

            node.IsRefArgument = Check(LexemType.Ref);
            node.TypeSignature = Ensure(ParseType, ParserMessages.ArgTypeExpected);

            if (Check(LexemType.Ellipsis))
            {
                if (node.IsRefArgument)
                    Error(ParserMessages.VariadicByRef);

                node.IsVariadic = true;
            }

            return node;
        }

        /// <summary>
        /// fun_arg_list                                = "(" { fun_single_arg } ")"
        /// </summary>
        private List<FunctionArgument> ParseFunManyArgs(bool required = false)
        {
            if (!Check(LexemType.ParenOpen))
                return null;

            var args = new List<FunctionArgument>();
            while (!Check(LexemType.ParenClose))
            {
                var arg = Attempt(() => ParseFunSingleArg(required));
                if (arg == null)
                    return null;

                args.Add(arg);
            }

            return args;
        }

        #endregion

        #region Blocks

        /// <summary>
        /// block                                       = local_stmt_list | local_stmt
        /// </summary>
        private CodeBlockNode ParseBlock()
        {
            var many = ParseLocalStmtList().ToList();
            if (many.Count > 0)
                return new CodeBlockNode {Statements = many};

            var single = ParseLocalStmt();
            if (single != null)
                return new CodeBlockNode {single};

            return null;
        }

        /// <summary>
        /// local_stmt_list                             = INDENT local_stmt { NL local_stmt } DEDENT
        /// </summary>
        private IEnumerable<NodeBase> ParseLocalStmtList()
        {
            if (!Check(LexemType.Indent))
                yield break;

            yield return Ensure(ParseLocalStmt, ParserMessages.ExpressionExpected);

            while (!Check(LexemType.Dedent))
            {
                if (!IsStmtSeparator())
                    Error(ParserMessages.NewlineSeparatorExpected);
                yield return Ensure(ParseLocalStmt, ParserMessages.ExpressionExpected);
            }
        }

        /// <summary>
        /// local_stmt                                  = name_def_stmt | set_stmt | expr
        /// </summary>
        private NodeBase ParseLocalStmt()
        {
            if (Peek(LexemType.PassLeft))
                Error(ParserMessages.ArgumentPassIndentExpected);

            if (Peek(LexemType.PassRight))
                Error(ParserMessages.MethodPassIndentExpected);

            return Attempt(ParseNameDefStmt)
                   ?? Attempt(ParseSetStmt)
                   ?? Attempt(ParseExpr);
        }

        #endregion

        #region Let & var

        /// <summary>
        /// name_def_stmt                               = var_multi_stmt | var_stmt | let_stmt
        /// </summary>
        private NodeBase ParseNameDefStmt()
        {
            return Attempt(ParseMultiVarStmt)
                   ?? Attempt(ParseVarStmt)
                   ?? Attempt(ParseLetStmt) as NodeBase;
        }

        /// <summary>
        /// var_multi_stmt                              = "var" identifier [ { "," identifier } ] ":" type
        /// </summary>
        private MultiVarNode ParseMultiVarStmt()
        {
            if (!Check(LexemType.Var))
                return null;

            var names = new List<string>();
            names.Add(Ensure(LexemType.Identifier, ParserMessages.VarIdentifierExpected).Value);

            while (Check(LexemType.Comma))
                names.Add(Ensure(LexemType.Identifier, ParserMessages.VarIdentifierExpected).Value);

            // fall back to var_stmt
            if (names.Count == 1 && Check(LexemType.Assign))
                return null;

            Ensure(LexemType.Colon, ParserMessages.SymbolExpected, ':');
            var type = Ensure(ParseType, ParserMessages.VarTypeExpected);

            return new MultiVarNode
            {
                Names = names.ToArray(),
                Type = type
            };
        }

        /// <summary>
        /// var_stmt                                    = "var" identifier "=" expr
        /// </summary>
        private VarNode ParseVarStmt()
        {
            if (!Check(LexemType.Var))
                return null;

            var node = new VarNode();
            node.Name = Ensure(LexemType.Identifier, ParserMessages.VarIdentifierExpected).Value;

            Ensure(LexemType.Assign, ParserMessages.SymbolExpected, '=');

            node.Value = Ensure(ParseExpr, ParserMessages.InitExpressionExpected);

            return node;
        }

        /// <summary>
        /// let_stmt                                    = "let" identifier "=" expr
        /// </summary>
        private LetNode ParseLetStmt()
        {
            if (!Check(LexemType.Let))
                return null;

            var node = new LetNode();
            node.Name = Ensure(LexemType.Identifier, ParserMessages.VarIdentifierExpected).Value;
            Ensure(LexemType.Assign, ParserMessages.SymbolExpected, '=');
            node.Value = Ensure(ParseExpr, ParserMessages.InitExpressionExpected);

            return node;
        }

        #endregion

        #region Assignment

        /// <summary>
        /// set_stmt                                    = set_id_stmt | set_stmbr_stmt | set_any_stmt
        /// </summary>
        private NodeBase ParseSetStmt()
        {
            return Attempt(ParseSetIdStmt)
                   ?? Attempt(ParseSetStmbrStmt)
                   ?? Attempt(ParseSetAnyStmt);
        }

        /// <summary>
        /// set_id_stmt                                 = identifier assignment_op expr
        /// </summary>
        private NodeBase ParseSetIdStmt()
        {
            if (!Peek(LexemType.Identifier))
                return null;

            var node = new SetIdentifierNode();
            node.Identifier = GetValue();

            if (Check(LexemType.Assign))
            {
                node.Value = Ensure(ParseExpr, ParserMessages.ExpressionExpected);
                return node;
            }

            if (PeekAny(BinaryOperators) && Peek(1, LexemType.Assign))
            {
                var opType = _lexems[_lexemId].Type;
                Skip(2);
                node.Value = Ensure(ParseExpr, ParserMessages.ExpressionExpected);
                return new ShortAssignmentNode(opType, node);
            }

            return null;
        }

        /// <summary>
        /// set_stmbr_stmt                              = type "::" identifier assignment_op expr
        /// </summary>
        private NodeBase ParseSetStmbrStmt()
        {
            var type = Attempt(ParseType);
            if (type == null)
                return null;

            if (!Check(LexemType.DoubleСolon))
                return null;

            var node = new SetMemberNode();
            node.StaticType = type;
            node.MemberName = Ensure(LexemType.Identifier, ParserMessages.MemberNameExpected).Value;

            if (Check(LexemType.Assign))
            {
                node.Value = Ensure(ParseExpr, ParserMessages.ExpressionExpected);
                return node;
            }

            if (PeekAny(BinaryOperators) && Peek(1, LexemType.Assign))
            {
                var opType = _lexems[_lexemId].Type;
                Skip(2);
                node.Value = Ensure(ParseExpr, ParserMessages.ExpressionExpected);
                return new ShortAssignmentNode(opType, node);
            }

            return null;
        }

        /// <summary>
        /// set_any_stmt                                = lvalue_expr assignment_op expr
        /// </summary>
        private NodeBase ParseSetAnyStmt()
        {
            var node = Attempt(ParseLvalueExpr);
            if (node == null)
                return null;

            if (Check(LexemType.Assign))
            {
                EnsureNoNullSafeAccessor(node);
                var expr = Ensure(ParseExpr, ParserMessages.AssignExpressionExpected);
                return MakeSetter(node, expr);
            }

            if (PeekAny(BinaryOperators) && Peek(1, LexemType.Assign))
            {
                EnsureNoNullSafeAccessor(node);
                var opType = _lexems[_lexemId].Type;
                Skip(2);
                var expr = Ensure(ParseExpr, ParserMessages.AssignExpressionExpected);
                return new ShortAssignmentNode(opType, MakeSetter(node, expr));
            }

            return null;
        }

        #endregion

        #region Lvalues

        /// <summary>
        /// lvalue_expr                                 = lvalue_name_expr | lvalue_paren_expr
        /// </summary>
        private NodeBase ParseLvalueExpr()
        {
            return Attempt(ParseLvalueNameExpr)
                   ?? Attempt(ParseLvalueParenExpr);
        }

        /// <summary>
        /// lvalue_name_expr                            = lvalue_name { accessor }
        /// </summary>
        private NodeBase ParseLvalueNameExpr()
        {
            var node = Attempt(ParseLvalueName);
            if (node == null)
                return null;

            while (true)
            {
                var acc = Attempt(ParseAccessor);
                if (acc == null)
                    return node;

                node = AttachAccessor(node, acc);
            }
        }

        /// <summary>
        /// lvalue_paren_expr                           = paren_expr accessor { accessor }
        /// </summary>
        private NodeBase ParseLvalueParenExpr()
        {
            var node = Attempt(ParseParenExpr);
            if (node == null)
                return null;

            var acc = Attempt(ParseAccessor);
            if (acc == null)
                return null;

            node = AttachAccessor(node, acc);
            while (true)
            {
                acc = Attempt(ParseAccessor);
                if (acc == null)
                    return node;

                node = AttachAccessor(node, acc);
            }
        }

        /// <summary>
        /// lvalue_name                                 = lvalue_stmbr_expr | lvalue_id_expr
        /// </summary>
        private NodeBase ParseLvalueName()
        {
            return Attempt(ParseLvalueStmbrExpr)
                   ?? Attempt(ParseLvalueIdExpr) as NodeBase;
        }

        /// <summary>
        /// lvalue_stmbr_expr                           = type "::" identifier
        /// </summary>
        private GetMemberNode ParseLvalueStmbrExpr()
        {
            var type = Attempt(ParseType);
            if (type == null || !Check(LexemType.DoubleСolon))
                return null;

            var node = new GetMemberNode();
            node.StaticType = type;
            node.MemberName = Ensure(LexemType.Identifier, ParserMessages.MemberNameExpected).Value;
            return node;
        }

        /// <summary>
        /// lvalue_id_expr                              = identifier
        /// </summary>
        private GetIdentifierNode ParseLvalueIdExpr()
        {
            if (!Peek(LexemType.Identifier))
                return null;

            return new GetIdentifierNode(GetValue());
        }

        #endregion

        #region Accessors

        /// <summary>
        /// get_expr                                    = atom { accessor }
        /// </summary>
        private NodeBase ParseGetExpr()
        {
            var node = Attempt(ParseAtom);
            if (node == null)
                return null;

            var isNullSafe = false;
            while (true)
            {
                var acc = Attempt(ParseAccessor);
                if (acc == null)
                    break;

                isNullSafe |= ((AccessorNodeBase) acc).IsNullSafe;
                node = AttachAccessor(node, acc);
            }

            // the whole chain short-circuits, so the null checks belong to the chain rather than to a link
            return isNullSafe
                ? new NullSafeChainNode {Chain = node}
                : node;
        }

        /// <summary>
        /// get_id_expr                                 = identifier [ type_args ]
        /// </summary>
        private GetIdentifierNode ParseGetIdExpr()
        {
            var node = Attempt(ParseLvalueIdExpr);
            if (node == null)
                return null;

            var hints = Attempt(ParseTypeArgs);
            if (hints != null)
                node.TypeHints = hints;

            return node;
        }

        /// <summary>
        /// get_stmbr_expr                              = type "::" identifier [ type_args ]
        /// </summary>
        private GetMemberNode ParseGetStmbrExpr()
        {
            var node = Attempt(ParseLvalueStmbrExpr);
            if (node == null)
                return null;

            var hints = Attempt(ParseTypeArgs);
            if (hints != null)
                node.TypeHints = hints;

            return node;
        }

        /// <summary>
        /// accessor                                    = accessor_idx | accessor_mbr
        /// </summary>
        private NodeBase ParseAccessor()
        {
            return Attempt(ParseAccessorIdx)
                   ?? Attempt(ParseAccessorMbr) as NodeBase;
        }

        /// <summary>
        /// accessor_idx                                = ( "[" | "?[" ) line_expr "]"
        /// </summary>
        private GetIndexNode ParseAccessorIdx()
        {
            var isNullSafe = Check(LexemType.NullSafeSquareOpen);
            if (!isNullSafe && !Check(LexemType.SquareOpen))
                return null;

            var node = new GetIndexNode {IsNullSafe = isNullSafe};
            node.Index = Ensure(ParseLineExpr, ParserMessages.IndexExpressionExpected);
            Ensure(LexemType.SquareClose, ParserMessages.SymbolExpected, ']');
            return node;
        }

        /// <summary>
        /// accessor_mbr                                = ( "." | "?." ) identifier [ type_args ]
        /// </summary>
        private GetMemberNode ParseAccessorMbr()
        {
            var isNullSafe = Check(LexemType.NullSafeDot);
            if (!isNullSafe && !Check(LexemType.Dot))
                return null;

            var node = new GetMemberNode {IsNullSafe = isNullSafe};
            node.MemberName = Ensure(LexemType.Identifier, ParserMessages.MemberNameExpected).Value;

            var args = Attempt(ParseTypeArgs);
            if (args != null)
                node.TypeHints = args;

            return node;
        }

        #endregion

        #region Expression root

        /// <summary>
        /// expr                                        = block_expr | line_expr
        /// </summary>
        private NodeBase ParseExpr()
        {
            return Attempt(ParseBlockExpr)
                   ?? Attempt(ParseLineExpr);
        }

        #endregion

        #region Block control structures

        /// <summary>
        /// block_expr                                  = if_block | while_block | for_block | using_block | try_stmt | match_block | new_block_expr | invoke_block_expr | invoke_block_pass_expr | lambda_block_expr
        /// </summary>
        private NodeBase ParseBlockExpr()
        {
            return Attempt(ParseIfBlock)
                   ?? Attempt(ParseWhileBlock)
                   ?? Attempt(ParseForBlock)
                   ?? Attempt(ParseUsingBlock)
                   ?? Attempt(ParseTryStmt)
                   ?? Attempt(ParseMatchBlock)
                   ?? Attempt(ParseNewBlockExpr)
                   ?? Attempt(ParseInvokeBlockExpr)
                   ?? Attempt(ParseInvokeBlockPassExpr)
                   ?? Attempt(ParseLambdaBlockExpr) as NodeBase;
        }

        /// <summary>
        /// if_block                                    = if_header block [ NL "else" block ]
        /// </summary>
        private IfNode ParseIfBlock()
        {
            var node = Attempt(ParseIfHeader);
            if (node == null)
                return null;

            node.TrueAction = Ensure(ParseBlock, ParserMessages.ConditionBlockExpected);
            if (Check(LexemType.Else))
                node.FalseAction = Ensure(ParseBlock, ParserMessages.CodeBlockExpected);

            return node;
        }

        /// <summary>
        /// while_block                                 = while_header block
        /// </summary>
        private WhileNode ParseWhileBlock()
        {
            var node = Attempt(ParseWhileHeader);
            if (node == null)
                return null;

            node.Body.LoadFrom(Ensure(ParseBlock, ParserMessages.LoopBodyExpected));
            return node;
        }

        /// <summary>
        /// for_block                                   = for_header block
        /// </summary>
        private ForeachNode ParseForBlock()
        {
            var node = Attempt(ParseForHeader);
            if (node == null)
                return null;

            node.Body = Ensure(ParseBlock, ParserMessages.LoopBodyExpected);
            return node;
        }

        /// <summary>
        /// using_block                                 = using_header block
        /// </summary>
        private UsingNode ParseUsingBlock()
        {
            var node = Attempt(ParseUsingHeader);
            if (node == null)
                return null;

            node.Body = Ensure(ParseBlock, ParserMessages.UsingBodyExpected);
            return node;
        }

        /// <summary>
        /// try_stmt                                    = "try" block catch_stmt_list [ finally_stmt ]
        /// </summary>
        private TryNode ParseTryStmt()
        {
            if (!Check(LexemType.Try))
                return null;
